<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top">

    <LinearLayout
        android:splitMotionEvents="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capitalsButton"
            android:id="@+id/capitalsButton"
            android:onClick="btnClick"
            android:layout_weight="1"
            android:background="@drawable/buttons"
            android:textColor="@android:color/white"
            android:padding="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flagsButton"
            android:id="@+id/flagsButon"
            android:onClick="btnClick"
            android:layout_weight="1"
            android:background="@drawable/buttons"
            android:textColor="@android:color/white"
            android:padding="2dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rateButton"
            android:id="@+id/rateButton"
            android:layout_weight="1"
            android:background="@drawable/buttons"
            android:textColor="@android:color/white"
            android:padding="2dp" />
    </LinearLayout>


</LinearLayout>